--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 <section class="customer" id="Customer"></section>
 
 <!--Item-->
-<section id="Item"></section>
+<section class="item" id="Item"></section>
 
 <!--PlaceOrder-->
-<section id="PlaceOrder"></section>
+<section class="placeOrder" id="PlaceOrder"></section>
 
-
+    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
