--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pos</title>
     <link rel="stylesheet" href="assets/fontawesome">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="customer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -43,7 +44,92 @@
 <section class="home" id="Home"></section>
 
 <!--Customer-->
-<section class="customer" id="Customer"></section>
+<section class="customer" id="Customer">
+    <!--search-->
+    <div class="card customer-card">
+        <div class="card-header">
+            Customer Search
+            <button id="new" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">New Customer</button>
+            <button id="view">View All Customer</button>
+        </div>
+        <div class="card-body">
+            <input type="text" name="Input NIC/TP/Name" placeholder="Input Customer ID/Name">
+            <button type="button" class="btn btn-outline-success">Search</button>
+        </div>
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-danger">Delete</button>
+        <button type="button" class="btn btn-outline-info">Details</button>
+        <button type="button" class="btn btn-outline-secondary">Clear</button>
+    </div>
+
+    <table class="table table-striped-columns">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Customer ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Address</th>
+                <th scope="col">Salary</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">C001</th>
+                <td>Sithira</td>
+                <td>Thalahena</td>
+                <td>75,000.00</td>
+            </tr>
+            <tr>
+                <th scope="row">C002</th>
+                <td>Piumini</td>
+                <td>Panadura</td>
+                <td>60,000.00</td>
+            </tr>
+            <tr>
+                <th scope="row">C003</th>
+                <td>Roneth</td>
+                <td>Malabe</td>
+                <td>80,000.00</td>
+            </tr>
+            </tbody>
+        </table>
+    </table>
+</section>
+<!--Modal-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Customer</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Customer ID</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail3" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Salary</label>
+                        <input type="email" class="form-control" id="exampleInputEmail4" aria-describedby="emailHelp">
+                    </div>
+
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <!--Item-->
 <section class="item" id="Item"></section>
