--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/fontawesome">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="customer.css">
+    <link rel="stylesheet" href="place.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -135,7 +136,125 @@
 <section class="item" id="Item"></section>
 
 <!--PlaceOrder-->
-<section class="placeOrder" id="PlaceOrder"></section>
+<section class="placeOrder" id="PlaceOrder">
+    <!--invoice-->
+    <div class="card text-center">
+        <div class="card-header" style="background: pink">
+           Invoice Details
+        </div>
+        <div class="card-body">
+            <label for="id">Order Id :</label>
+            <input type="text"  id="id" placeholder="Order Id">
+
+            <label for="date">Date</label>
+            <input type="date" id="date">
+
+            <label for="cus">Customer Id :</label>
+            <input type="text"  id="cus" placeholder="Id">
+
+            <label for="name">Customer Name :</label>
+            <input type="text"  id="name" placeholder="Name">
+
+            <label for="address">Address :</label>
+            <input type="text"  id="address" placeholder="Address">
+
+            <label for="salary">Salary :</label>
+            <input type="number"  id="salary" placeholder="Address">
+
+        </div>
+    </div>
+
+    <!--Item select-->
+    <div class="card text-center">
+        <div class="card-header" style="background: lightskyblue">
+            Item Select
+        </div>
+        <div class="card-body">
+            <label for="itemn">Item :</label>
+            <input type="text" id="itemn" placeholder="Item">
+
+            <label for="code">Item code :</label>
+            <input type="text" id="code" placeholder="Item Code">
+
+            <label for="itemName">Item Name :</label>
+            <input type="text" id="itemName" placeholder="Item Name">
+
+            <label for="price">Item Price :</label>
+            <input type="text" id="price" placeholder="Price">
+
+            <label for="qty">QtyOnHand :</label>
+            <input type="text" id="qty" placeholder="QtyOnHand">
+
+            <label for="qt">Order Qty :</label>
+            <input type="text" id="qt" placeholder="Order Qty">
+
+        </div>
+        <div class="card-footer text-body-secondary">
+            <button type="button" class="btn btn-outline-info">Add Item</button>
+        </div>
+    </div>
+
+    <!--price-->
+    <div class="card text-center">
+        <div class="card-body" style="background: lightgrey">
+            <label>Total : 2700/=</label>
+            <label>Sub Total : 2500/=</label>
+
+            <label for="cash">Cash :</label>
+            <input type="number"  id="cash" placeholder="Cash">
+
+            <label for="discount">Discount :</label>
+            <input type="number"  id="discount" placeholder="%">
+
+            <label for="balance">Balance :</label>
+            <input type="number"  id="balance" placeholder="Balance">
+
+
+
+        </div>
+        <div class="card-footer text-body-secondary">
+            <button type="button" class="btn btn-outline-success">Purchase</button>
+        </div>
+    </div>
+
+    <table class="table table-striped-columns">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Item ID</th>
+                <th scope="col">Item name</th>
+                <th scope="col">Price</th>
+                <th scope="col">Qty</th>
+                <th scope="col">Total</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">I001</th>
+                <td>Banana</td>
+                <td>50.00</td>
+                <td>50</td>
+                <td>2500.00</td>
+            </tr>
+            <tr>
+                <th scope="row">I001</th>
+                <td>Banana</td>
+                <td>50.00</td>
+                <td>50</td>
+                <td>2500.00</td>
+            </tr>
+            <tr>
+                <th scope="row">I001</th>
+                <td>Banana</td>
+                <td>50.00</td>
+                <td>50</td>
+                <td>2500.00</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </table>
+</section>
 
     
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
