--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Pos</title>
     <link rel="stylesheet" href="assets/fontawesome">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="customer.css">
     <link rel="stylesheet" href="place.css">
+    <link rel="stylesheet" href="item.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -42,7 +44,18 @@
 </nav>
 
 <!--Home-->
-<section class="home" id="Home"></section>
+<section class="home" id="Home">
+    <div class="banner">
+        <!--        <div class="navbar">-->
+        <div class="content">
+            <h1>ORDER AND SHOPPING</h1>
+            <p><br></p>
+            <div>
+                <button id="buttonCon" type="button">CONTACT US</button>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!--Customer-->
 <section class="customer" id="Customer">
@@ -133,7 +146,91 @@
 </div>
 
 <!--Item-->
-<section class="item" id="Item"></section>
+<section class="item" id="Item">
+    <!--search-->
+    <div class="card customer-card">
+        <div class="card-header">
+            Item Search
+            <button id="newItem" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1">New Item</button>
+            <button id="viewItem">View All item</button>
+        </div>
+        <div class="card-body">
+            <input type="text" name="Input NIC/TP/Name" placeholder="Input Customer ID/Name">
+            <button type="button" class="btn btn-outline-success">Search</button>
+        </div>
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-danger">Delete</button>
+        <button type="button" class="btn btn-outline-info">Details</button>
+        <button type="button" class="btn btn-outline-secondary">Clear</button>
+    </div>
+    <table class="table table-striped-columns">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Item Code</th>
+                <th scope="col">Item Name</th>
+                <th scope="col">Item Price</th>
+                <th scope="col">Item Quantity</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">I001</th>
+                <td>Banana</td>
+                <td>20</td>
+                <td>100</td>
+            </tr>
+            <tr>
+                <th scope="row">I002</th>
+                <td>Bread</td>
+                <td>120</td>
+                <td>60</td>
+            </tr>
+            <tr>
+                <th scope="row">I003</th>
+                <td>Biscuit</td>
+                <td>250</td>
+                <td>80</td>
+            </tr>
+            </tbody>
+        </table>
+    </table>
+</section>
+<!--Modal-->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel1">Add New Item</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Item Code</label>
+                        <input type="email" class="form-control" id="exampleInputEmail02" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Item Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail03" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Item Price</label>
+                        <input type="email" class="form-control" id="exampleInputEmail04" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Item Quantity</label>
+                        <input type="email" class="form-control" id="exampleInputEmail05" aria-describedby="emailHelp">
+                    </div>
+
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <!--PlaceOrder-->
 <section class="placeOrder" id="PlaceOrder">
