--- a/Item.html
+++ b/Item.html
@@ -5,15 +5,15 @@
     <title>Item</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        .cus{
+        .item{
             position: absolute;
             left: 10%;
             top: 12%;
         }
-        #cus{
+        #item{
             width: 10%;
         }
-        .cust-card{
+        .item-card{
             position: absolute;
             left: 10%;
             top: 25%;
@@ -24,32 +24,32 @@
             background: darkblue;
             color: white;
         }
-        .new{
+        .newItem{
             position: absolute;
             right: 14%;
             top: 2%;
         }
-        .view{
+        .viewItem{
             position: absolute;
             right: 2%;
             top: 2%;
         }
-        .delete{
+        .deleteI{
             position: absolute;
             left: 0;
             top: 120%;
         }
-        .update{
+        .updateI{
             position: absolute;
             left: 8%;
             top: 120%;
         }
-        .clear{
+        .clearI{
             position: absolute;
             left: 16%;
             top: 120%;
         }
-        .table{
+        .tableI{
             position: absolute;
             left: 7%;
             top: 190%;
@@ -85,15 +85,15 @@
     </nav>
 </section>
 <section class="customer">
-    <p class="h3 cus"><img src="assets/customer.png" alt="customer" id="cus">Item</p>
+    <p class="h3 item"><img src="assets/customer.png" alt="customer" id="item">Item</p>
 
-    <div class="card cust-card">
+    <div class="card item-card">
         <div class="card-body">
             <div class="card">
                 <div class="card-header card-search">
                     Item Search
-                    <button type="button" class="btn btn-primary new">New Item</button>
-                    <button type="button" class="btn btn-warning view">View All Item</button>
+                    <button type="button" class="btn btn-primary newItem">New Item</button>
+                    <button type="button" class="btn btn-warning viewItem">View All Item</button>
                 </div>
                 <div class="card-body">
                     <nav class="navbar bg-body-tertiary">
@@ -105,11 +105,11 @@
                         </div>
                     </nav>
                 </div>
-                <button type="button" class="btn btn-danger delete">Delete</button>
-                <button type="button" class="btn btn-secondary update">Update</button>
-                <button type="button" class="btn btn-dark clear">Clear</button>
+                <button type="button" class="btn btn-danger deleteI">Delete</button>
+                <button type="button" class="btn btn-secondary updateI">Update</button>
+                <button type="button" class="btn btn-dark clearI">Clear</button>
 
-                <table class="table table-striped table">
+                <table class="table table-striped tableI">
                     <thead>
                     <tr>
                         <th scope="col">Item Name</th>
