--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Pos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="customer.css">
+  <link rel="stylesheet" href="item.css">
+  <link rel="stylesheet" href="Order.css">
 </head>
 <body>
 
@@ -21,13 +24,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Customer.html">Customer</a>
+            <a class="nav-link" id="nav-customer">Customer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Item.html">Item</a>
+            <a class="nav-link" id="nav-item">Item</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Order.html">Order</a>
+            <a class="nav-link" id="nav-order">Order</a>
           </li>
         </ul>
       </div>
@@ -35,7 +38,159 @@
   </nav>
 </section>
 
+<!--Customer-->
+<section class="customer" id="Customer-section">
+  <p class="h3 cus"><img src="assets/customer.png" alt="customer" id="cus">Customer</p>
 
+  <div class="card cust-card">
+    <div class="card-body">
+      <div class="card">
+        <div class="card-header card-search">
+          Customer Search
+          <button type="button" class="btn btn-primary new">New Customer</button>
+          <button type="button" class="btn btn-warning view">View All Customer</button>
+        </div>
+        <div class="card-body">
+          <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Input Name/Nic Here" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+        </div>
+        <button type="button" class="btn btn-danger delete">Delete</button>
+        <button type="button" class="btn btn-secondary update">Update</button>
+        <button type="button" class="btn btn-dark clear">Clear</button>
+
+        <table class="table table-striped table">
+          <thead>
+          <tr>
+            <th scope="col">Customer Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Address</th>
+            <th scope="col">Contact Number</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Sithira</td>
+            <td>Thalahena</td>
+            <td>070 406 8026</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!--Item-->
+<section id="Item-section">
+  <p class="h3 item"><img src="assets/customer.png" alt="customer" id="item">Item</p>
+
+  <div class="card item-card">
+    <div class="card-body">
+      <div class="card">
+        <div class="card-header card-search">
+          Item Search
+          <button type="button" class="btn btn-primary newItem">New Item</button>
+          <button type="button" class="btn btn-warning viewItem">View All Item</button>
+        </div>
+        <div class="card-body">
+          <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Input Name/Nic Here" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+        </div>
+        <button type="button" class="btn btn-danger deleteI">Delete</button>
+        <button type="button" class="btn btn-secondary updateI">Update</button>
+        <button type="button" class="btn btn-dark clearI">Clear</button>
+
+        <table class="table table-striped tableI">
+          <thead>
+          <tr>
+            <th scope="col">Item Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!--Order-->
+
+<script src="assets/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+  $('#Customer-section').css({
+    display:'none'
+  });
+
+  $('#Item-section').css({
+    display:'none'
+  });
+
+  $('#nav-customer').on('click',()=>{
+    $('#Customer-section').css({
+      display:'block'
+    });
+    $('#Item-section').css({
+      display: 'none'
+    });
+  });
+
+  $('#nav-item').on('click',()=>{
+    $('#Item-section').css({
+      display:'block'
+    });
+    $('#Customer-section').css({
+      display: 'none'
+    });
+  });
+
+</script>
 </body>
 </html>
