--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <input type="text"  id="address" placeholder="Address">
 
       <label for="salary">Salary :</label>
-      <input type="number"  id="salary" placeholder="Address">
+      <input type="number"  id="salary" placeholder="Salary">
 
     </div>
   </div>
