--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <!--Item-->
 <section id="Item-section">
-  <p class="h3 item"><img src="assets/customer.png" alt="customer" id="item">Item</p>
+  <p class="h3 item"><img src="assets/item.png" alt="customer" id="item">Item</p>
 
   <div class="card item-card">
     <div class="card-body">
