--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Pos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="customer.css">
-  <link rel="stylesheet" href="item.css">
-  <link rel="stylesheet" href="Order.css">
+  <link rel="stylesheet" href="Styles/customer.css">
+  <link rel="stylesheet" href="Styles/item.css">
+  <link rel="stylesheet" href="Styles/Order.css">
 </head>
 <body>
 
@@ -47,7 +47,7 @@
       <div class="card">
         <div class="card-header card-search">
           Customer Search
-          <button type="button" class="btn btn-primary new">New Customer</button>
+          <button type="button" class="btn btn-primary new" data-bs-toggle="modal" data-bs-target="#newCustomerModal">New Customer</button>
           <button type="button" class="btn btn-warning view">View All Customer</button>
         </div>
         <div class="card-body">
@@ -60,11 +60,49 @@
             </div>
           </nav>
         </div>
-        <button type="button" class="btn btn-danger delete">Delete</button>
-        <button type="button" class="btn btn-secondary update">Update</button>
-        <button type="button" class="btn btn-dark clear">Clear</button>
 
-        <table class="table table-striped table">
+        <!--Modal-->
+        <div class="modal fade" id="newCustomerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header text-bg-success">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">New Customer</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="mb-3">
+                  <label class="form-label">ID :</label>
+                  <input type="text" class="form-control" id="customerID">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Name :</label>
+                  <input type="text" class="form-control" id="customerName">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Email :</label>
+                  <input type="email" class="form-control" id="customerEmail">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Address :</label>
+                  <input type="text" class="form-control" id="customerAddress">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Phone Number :</label>
+                  <input type="tel" class="form-control" id="customerPhone">
+                </div>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-success">Save</button>
+                <button type="button" class="btn btn-outline-primary">Update </button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <table class="table table-striped table-Customer">
           <thead>
           <tr>
             <th scope="col">Customer Id</th>
@@ -108,7 +146,7 @@
       <div class="card">
         <div class="card-header card-search">
           Item Search
-          <button type="button" class="btn btn-primary newItem">New Item</button>
+          <button type="button" class="btn btn-primary newItem" data-bs-toggle="modal" data-bs-target="#newItemModal">New Item</button>
           <button type="button" class="btn btn-warning viewItem">View All Item</button>
         </div>
         <div class="card-body">
@@ -121,11 +159,45 @@
             </div>
           </nav>
         </div>
-        <button type="button" class="btn btn-danger deleteI">Delete</button>
-        <button type="button" class="btn btn-secondary updateI">Update</button>
-        <button type="button" class="btn btn-dark clearI">Clear</button>
 
-        <table class="table table-striped tableI">
+        <!--Modal-->
+        <div class="modal fade" id="newItemModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header text-bg-success">
+                <h1 class="modal-title fs-5" id="exampleModalLabel1">New Item</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="mb-3">
+                  <label class="form-label">Item Name :</label>
+                  <input type="text" class="form-control" id="itemName">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label"> Description :</label>
+                  <input type="text" class="form-control" id="description">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Quantity :</label>
+                  <input type="tel" class="form-control" id="quantity">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Price :</label>
+                  <input type="tel" class="form-control" id="price">
+                </div>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-success">Save</button>
+                <button type="button" class="btn btn-outline-primary">Update </button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <table class="table table-striped table-Item">
           <thead>
           <tr>
             <th scope="col">Item Name</th>
@@ -242,7 +314,7 @@
     </div>
   </div>
 
-  <!--<table class="table table-striped table table">
+  <table class="table table-striped table table-Order">
     <thead>
     <tr>
       <th scope="col">Item Name</th>
@@ -270,59 +342,11 @@
       <td>@twitter</td>
     </tr>
     </tbody>
-  </table>-->
+  </table>
 </section>
 
 <script src="assets/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script>
-  $('#Customer-section').css({
-    display:'none'
-  });
-
-  $('#Item-section').css({
-    display:'none'
-  });
-
-  $('#order-section').css({
-    display:'none'
-  });
-
-  $('#nav-customer').on('click',()=>{
-    $('#Customer-section').css({
-      display:'block'
-    });
-    $('#Item-section').css({
-      display: 'none'
-    });
-    $('#order-section').css({
-      display:'none'
-    });
-  });
-
-  $('#nav-item').on('click',()=>{
-    $('#Item-section').css({
-      display:'block'
-    });
-    $('#Customer-section').css({
-      display: 'none'
-    });
-    $('#order-section').css({
-      display:'none'
-    });
-  });
-
-  $('#nav-order').on('click',()=>{
-    $('#order-section').css({
-      display:'block'
-    });
-    $('#Customer-section').css({
-      display: 'none'
-    });
-    $('#Item-section').css({
-      display: 'none'
-    });
-  });
-</script>
+<script src="Controller/Spa.js"></script>
 </body>
 </html>
