--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
 
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-outline-success">Save</button>
-                <button type="button" class="btn btn-outline-primary">Update </button>
-                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
-
+                <button type="submit" class="btn btn-outline-success" id="customer-save">Save</button>
+                <button type="button" class="btn btn-outline-primary" id="customer-update">Update </button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" id="customer-delete">Delete</button>
+                <button type="reset" class="btn btn-warning" id="customer-reset">Reset</button>
               </div>
             </div>
           </div>
         </div>
 
-        <table class="table table-striped table-Customer">
+        <table class="table table-striped ">
           <thead>
           <tr>
             <th scope="col">Customer Id</th>
@@ -107,24 +107,8 @@
             <th scope="col">Contact Number</th>
           </tr>
           </thead>
-          <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Sithira</td>
-            <td>Thalahena</td>
-            <td>070 406 8026</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <tbody id="table-Customer">
+
           </tbody>
         </table>
       </div>
@@ -345,5 +329,6 @@
 <script src="assets/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="Controller/Spa.js"></script>
+<script type="module" src="Controller/Customer.js"></script>
 </body>
 </html>
