add Customer.js & Item.js

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
           <div class="col-12">
             <label for="Quantity" class="form-label">Order Quantity</label>
-            <input type="Number" class="form-control" id="Quantity" placeholder="Enter needed quantity">
+            <input type="Number" class="form-control" id="Quantity">
           </div>
           <div class="col-md-4">
             <label for="Sub Total" class="form-label">Sub Total</label>
