--- a/index.html
+++ b/index.html
@@ -200,12 +200,14 @@
         <h1>Items</h1>
         <form class="row g-3">
           <div class="col-md-6">
-            <label for="Item Id" class="form-label">Item Code</label>
-            <input type="number" class="form-control" id="Item Id">
+            <label for="Item Code" class="form-label">Item Code</label>
+            <select class="form-select" aria-label="Disabled select example" id="Item Code">
+              <option selected>Select Item Code</option>
+            </select>
           </div>
           <div class="col-md-6">
             <label for="itemDesc" class="form-label">Item Name</label>
-            <input type="text" class="form-control" id="itemDesc">
+            <input type="text" class="form-control" id="itemDesc" disabled>
           </div>
           <div class="col-12">
             <label for="Unit Price" class="form-label">Unit Price</label>
@@ -237,12 +239,14 @@
             <input type="number" class="form-control" id="inputEmail4">
           </div>
           <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Customer Id</label>
-            <input type="number" class="form-control" id="inputPassword4">
+            <label for="customer_id" class="form-label">Customer Id</label>
+            <select class="form-select" aria-label="Disabled select example" id="customer_id">
+              <option selected>Select Customer Id</option>
+            </select>
           </div>
           <div class="col-12">
             <label for="inputAddress2" class="form-label">Customer Name</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="">
+            <input type="text" class="form-control" id="inputAddress2" placeholder="" disabled>
           </div>
           <div class="col-12">
             <label for="inputAddress" class="form-label">Date</label>
