edit Customer.js & Item.js

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Input Name/Nic Here" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2" type="search" placeholder="Input Name/Nic Here" aria-label="Search" id="customerSearchID">
+                <button class="btn btn-outline-success" type="button" id="customer-search">Search</button>
               </form>
             </div>
           </nav>
@@ -148,8 +148,8 @@
           <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Input Name/Nic Here" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2" type="search" placeholder="Input Id Here" aria-label="Search" id="itemSearchID">
+                <button class="btn btn-outline-success" type="button" id="item-search">Search</button>
               </form>
             </div>
           </nav>
@@ -224,8 +224,6 @@
       </div>
     </div>
   </div>
-</section>
-
 </section>
 
 <!--Order-->
