edit Customer.js & Item.js

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="modal-body">
                 <div class="mb-3">
                   <label class="form-label">ID :</label>
-                  <input type="text" class="form-control" id="customerID">
+                  <input type="text" class="form-control" id="customerID" disabled>
                 </div>
                 <div class="mb-3">
                   <label class="form-label">Name :</label>
@@ -166,7 +166,7 @@
               <div class="modal-body">
                 <div class="mb-3">
                   <label class="form-label">Item Id :</label>
-                  <input type="text" class="form-control" id="itemName">
+                  <input type="text" class="form-control" id="itemName" disabled>
                 </div>
                 <div class="mb-3">
                   <label class="form-label"> Description :</label>
