--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-header text-bg-success">
-                <h1 class="modal-title fs-5" id="exampleModalLabel1">New Item</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel1">Item</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
