edit Customer.js & Item.js

--- a/html/Customer.html
+++ b/html/Customer.html
@@ -85,7 +85,7 @@
   </nav>
 </section>
   <section class="customer">
-    <p class="h3 cus"><img src="assets/customer.png" alt="customer" id="cus">Customer</p>
+    <p class="h3 cus"><img src="../assets/customer.png" alt="customer" id="cus">Customer</p>
 
     <div class="card cust-card">
       <div class="card-body">
