--- a/html/Item.html
+++ b/html/Item.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 <section class="customer">
-    <p class="h3 item"><img src="assets/customer.png" alt="customer" id="item">Item</p>
+    <p class="h3 item"><img src="../assets/customer.png" alt="customer" id="item">Item</p>
 
     <div class="card item-card">
         <div class="card-body">
