--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Pos</title>
+  <meta charset="UTF-8">
+  <title>Pos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="Styles/customer.css">
   <link rel="stylesheet" href="Styles/item.css">
@@ -329,11 +329,8 @@
   </div>
 </section>
 
-<script src="assets/jquery-3.7.1.min.js"></script>
+<script src="assets/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="Controller/Spa.js"></script>
-<script type="module" src="Controller/Customer.js"></script>
-<script type="module" src="Controller/Item.js"></script>
-<script type="module" src="Controller/Order.js"></script>
+<script src="Js/Spa.js"></script>
 </body>
 </html>
